    to AutoGenerate.  We now correctly throw an exception if you are requesting
    encrypted passwords but it works ok for hashed passwords. (Bug #29235)
  - Fixed problem with selecting users for roles in the web admin tool.  The problem was that
    we had a simple syntax error in our database lookup code. (Bug #29236)
    
Version 5.1.2 - 6/12/2007
  - Fixed integration with the Website Administration Tool.  Before this fix, the test link
    was visible but did not work and  user management did not work.
  - Reintroduced code to properly return field values as byte[] when the binary flag is present.
    (See release notes)    
  - Fixed problem preventing the DataSet Designer or TableAdapter wizard from being
    able to generate insert, update, and delete statements. (Bug #26347)    
  - Fixed problem preventing use of stored procedures for insert, update, and
    delete statements in a table adapter.    
  - Fixed problem where text columns would not appear in the Visual Studio query builder (Bug #28437)	
	    
Version 5.1.1
  - Fixed password property on MySqlConnectionStringBuilder to use PasswordPropertyText 
    attribute.  This causes dots to show instead of actual password text.
  - Fixed problem with pooling on the compact framework.  It should work now.    
  - Install now calls VS setup only when VS integration is selected. (bug #28260)
  - MySqlRoleProvider.GetRolesForUser now works correctly (bug #28251)
  - Installer now adds a default connection string to machine.config.  This will prevent errors related to a missing 
    connection string.  You will need to override this value in your web.config files.    
  - Changed installer to only give option to install Visual Studio integration if Visual Studio 8 is installed

Version 5.1.0 - 5/1/2007

  - Added Membership and Role provider contributed by Sean Wright (thanks!)
  - Now compiles for .NET CF 2.0
  - Rewrote stored procedure parsing code using a new SQL tokenizer.  Really nasty