@@ -6,6 +6,8 @@ Version 5.1.3 -
     encrypted passwords but it works ok for hashed passwords. (Bug #29235)
   - Fixed problem with selecting users for roles in the web admin tool.  The problem was that
     we had a simple syntax error in our database lookup code. (Bug #29236)
+  - Added AutoEnlist connection string option.  Setting it to false will prevent the connection
+    from automatically enlisting in any current transaction    
     
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
